--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,12 +1,13 @@
-@use './abstracts/functions';
-@use './abstracts/mixins';
-@use './abstracts/variable';
-@use './base/reset';
-@use './base/typography';
-@use './components/buttons';
-@use './components/cards';
-@use './layout/footer';
-@use './layout/grid';
-@use './layout/header';
-@use './pages/about';
-@use './pages/home';
+@use './abstracts/functions' as *;
+@use './abstracts/mixins' as *;
+@use './abstracts/variable' as *;
+@use './base/reset' as *;
+@use './base/typography' as *;
+@use './components/buttons' as *;
+@use './components/cards' as *;
+@use './layout/footer' as *;
+@use './layout/grid' as *;
+@use './layout/header' as *;
+@use './layout/navbar' as *;
+@use './pages/about' as *;
+@use './pages/home' as *;
