--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -1,20 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz@6..12&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-nav
-{
-  .nav
-  {
+nav {
+  .nav {
     font-family: Poppins;
     font-weight: 400;
     font-size: 22px;
     line-height: 33px;
     letter-spacing: 2%;
-    li a
-    {
+
+    li a {
       color: #252641;
     }
-    a
-    {
+
+    a {
       color: white;
       font-family: Poppins;
       font-weight: 500;
@@ -24,14 +22,13 @@ nav
     }
   }
 }
-.head
-{
-  h1
-  {
-    span
-    {
+
+.head {
+  h1 {
+    span {
       color: #7F2736;
     }
+
     margin-top: 100px;
     font-family: Nunito Sans;
     font-weight: 800;
@@ -41,8 +38,8 @@ nav
     max-width: 681px;
     color: #2C2D32;
   }
-  p
-  {
+
+  p {
     font-family: Nunito Sans;
     font-weight: 400;
     font-size: 24px;
@@ -53,14 +50,14 @@ nav
     padding-top: 40px;
     padding-bottom: 40px;
   }
-  &__btn
-  {
+
+  &__btn {
     display: flex;
     align-items: center;
 
     column-gap: 49px;
-    a
-    {
+
+    a {
       font-family: Poppins;
       font-weight: 600;
       font-size: 24px;
@@ -68,8 +65,8 @@ nav
       letter-spacing: 0%;
       color: white;
     }
-    p
-    {
+
+    p {
       display: flex;
       align-items: center;
 
@@ -79,8 +76,8 @@ nav
       line-height: 36px;
       letter-spacing: 0%;
       color: #252641;
-      span
-      {
+
+      span {
         margin-right: 20px;
         width: 62px;
         height: 62px;
@@ -90,6 +87,49 @@ nav
         align-items: center;
         justify-content: center;
 
+      }
+    }
+  }
+}
+
+main {
+  .main__top {
+    h2 {
+      font-family: Poppins;
+      font-weight: 700;
+      font-size: 36px;
+      line-height: 64.8px;
+      letter-spacing: 0%;
+      color: #2C2D32;
+    }
+
+    span {
+      color: #7F2736;
+    }
+
+    p {
+      padding-top: 20px;
+      text-align: center;
+      max-width: 837px;
+      font-family: Poppins;
+      font-weight: 400;
+      font-size: 24px;
+      line-height: 43.2px;
+      letter-spacing: 0%;
+      text-align: center;
+    }
+  }
+
+  .main__center {
+    &_title {
+      p {
+        font-family: Poppins;
+        font-weight: 500;
+        font-size: 30px;
+        line-height: 45px;
+        letter-spacing: 0%;
+        text-align: center;
+        color: #7F2736;
       }
     }
   }
