--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,14 +1,37 @@
-header
-{
+header {
   background: url(/src/images/bg.png) no-repeat center / cover;
   height: 900px;
 }
-header
-{
-  .head__big
-  {
+
+header {
+  .head__big {
     display: flex;
     align-items: center;
     justify-content: space-between;
+  }
+}
+
+main {
+  .main__top {
+    margin-top: 100px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+  }
+}
+.main__center
+{
+  flex-wrap: wrap;
+  display: flex;
+  align-items: center;
+  // justify-content: space-between;
+  &_title
+  {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 100px;
   }
 }
