--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -21,17 +21,89 @@ main {
     text-align: center;
   }
 }
-.main__center
-{
+
+.main__center {
   flex-wrap: wrap;
   display: flex;
   align-items: center;
-  // justify-content: space-between;
-  &_title
-  {
+
+  &_title {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-bottom: 100px;
+  }
+}
+.footer {
+  h2 {
+    font-family: Poppins;
+    font-weight: 600;
+    font-size: 44px;
+    line-height: 79.2px;
+    letter-spacing: 0%;
+    text-align: center;
+    color: #2C2D32;
+    span {
+      color: #7F2736;
+    }
+  }
+  h3 {
+    font-family: Poppins;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 43.2px;
+    letter-spacing: 2%;
+    text-align: center;
+    color: #2C2D32;
+    margin-bottom: 50px;
+  }
+
+  &__img {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+
+    &-1 {
+      position: relative;
+      display: inline-block;
+
+      p {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        translate: -50% -50%;
+        font-family: Poppins;
+        font-weight: 600;
+        font-size: 32px;
+        line-height: 48px;
+        letter-spacing: 0%;
+        color: #fff;
+      }
+
+      a:hover {
+        background: #fff;
+        color: #99525E;
+      }
+
+      a {
+        transition: .3s;
+        font-family: Poppins;
+        font-weight: 500;
+        font-size: 22px;
+        line-height: 33px;
+        letter-spacing: 0%;
+        border: 1px solid #fff;
+        color: #fff;
+        border: 1px solid #fff;
+        color: #fff;
+        padding: 13px 20px;
+        border-radius: 50px;
+      }
+
+      img {
+        background: url(/src/images/bg1-1.png) no-repeat center;
+      }
+    }
   }
 }
